fix: move hero text higher on mobile

--- a/css/memorial.css
+++ b/css/memorial.css
@@ -150,7 +150,7 @@
 
     .hero__content {
         padding: 24px 16px;
-        margin-top: -25vh;
+        margin-top: -40vh;
     }
 
     .hero__bg {
